--- a/src/styles/UserProfile.css
+++ b/src/styles/UserProfile.css
@@ -4,6 +4,7 @@
     margin: 1rem auto;
     box-shadow: 0 2px 20px var(--black-soft);
     background-color: var(--profile-ctn-background);
+    color: black;
   }
   
   .profile-img {
